a1/brendan_gordon/TEST_PROGRAMS/invalidtype/yu_hua/b.min
var x: int;
x = "haha";
